# LUMR

./: .gitignore  CMakeLists.txt  README.md  compile.sh  main.c  main.cpp  upload.php
CSR/: CMakeLists.txt
CSR/lib/: pages.h
CSR/src/: pages.cpp
api/lib/: auth.h  comment.h  common.h  connections.h  likes.h  message.h  notification.h  post.h  profile.h  search.h  user.h
api/src/: auth.cpp  comment.cpp  common.cpp  page.cpp  post.cpp  search.cpp  user.cpp
app/: CMakeLists.txt  Dockerfile  main.cpp
app/api/lib/: PageServingApi.h  UserApiHandler.h  auth.h  authenticate.h  comment.h  common.h  connections.h  followers.h  following.h  message.h  notification.h  page.h  pageserving.h  post.h  search.h  user.h
app/api/php/: img.php
app/api/src/: PageServingApi.cpp  UserApiHandler.cpp  auth.cpp  authenticate.cpp  common.cpp  connections.cpp  followers.cpp  following.cpp  likes.cpp  message.cpp  notification.cpp  pageserving.cpp  profile.cpp  search.cpp  user.cpp
app/client/public/: about.html  dashboard.html  index.html  login.html  signup.html
app/client/public/static/scripts/: dashboard.js  index.js  login.js  signup.js
app/client/public/static/styles/: dashboard.css  login.css  signup.css  styles.css
app/config/: config.json
app/database/: LURM.sql
app/database/lib/: DBConnector.h  factory.h
app/database/models/: message.h  user.h
app/database/src/: DBConnector.cpp  factory.cpp
app/models/: user.h  user_connections.h
app/script/: compile.sh  removeimages.sh
app/scripts/: dependencies.sh
app/server/lib/: server.h
app/server/src/: server.c  server.cpp
app/services/auth/: CMakeLists.txt  main.cpp
app/services/auth/data/lib/: DBConnector.h
app/services/auth/data/src/: DBConnector.cpp
app/services/auth/lib/: post_requests.h  server.h
app/services/auth/src/: get_requests.cpp  post_requests.cpp  server.cpp
app/services/page-serving/: CMakeLists.txt
app/services/page-serving/client/public/: app.html  login.html
app/services/page-serving/client/public/static/scripts/: login.js
app/services/web/: CMakeLists.txt  Dockerfile
app/services/web/client/public/: index.html  login.html  signup.html
app/services/web/client/public/static/scripts/: login.js  signup.js
app/services/web/client/public/static/styles/: dashboard.css
app/services/web/lib/: server.h
app/services/web/models/: message.h  user.h
app/services/web/src/: get_requests.cpp  server.cpp
cache/: CMakeLists.txt
cache/lib/: cache.h  user_data.h
cache/src/: cache.cpp  user_data.cpp
client/: index.html
client/pages/: dashboard.html  login.html  profilesetup.html  signup.html
client/public/: login.html  signup.html
client/public/images/: Trivpal.psd
client/secure/: dashboard.html
client/static/scripts/: app.js  followUser.js  login.js  profilesetup.js  responsive.js  signup.js  userSearch.js  userdashboard.js
client/static/styles/: dashboard.css  login.css  main.css  profilesetup.css  responsive.css  signup.css  styles.css
config/: config.json
controllers/: CMakeLists.txt
controllers/lib/: connectionController.h  controller.h  courseController.h  degreeController.h  imageController.h  institutionsController.h  userAuthentication.h  userController.h  userRegistrationController.h  webpagesController.h
controllers/src/: connectionController.cpp  courseController.cpp  degreeController.cpp  imageController.cpp  institutionsController.cpp  userAuthentication.cpp  userController.cpp  userRegistrationController.cpp  webpagesController.cpp
database/: CMakeLists.txt  LURM.sql  lurm_db.sql
database/connection/lib/: DBManager.h
database/connection/src/: DBManager.cpp
database/lib/: database.h  factory.h
database/queries/lib/: notificationsQueries.h  (+2 more)
database/src/: database.cpp  factory.cpp
datasets/: clear_database.py  clear_user_tables.py  data_processing.py  institutions.json
docker/: docker-compose.yaml
docs/: ReadMe.md
http_response/: http_res.h
include/: common.cpp  common.h
jsonparsing/lib/: jsonParser.h
jsonparsing/src/: jsonParser.cpp
models/: CMakeLists.txt  connection.h  course.h  degree.h  institution.h  notification.h  notifications.h  profile.h  user.h  user_connections.h
routes/lib/: routes.h
routes/src/: routes.cpp
scripts/: compile.sh  setup.sh
server/: CMakeLists.txt
server/lib/: route.h  server.h  webserver.h
server/src/: route.cpp  server.c  server.cpp  webserver.cpp
temp/: .gitignore  CMakeLists.txt
temp/app/: CMakeLists.txt  Dockerfile  LUMR
temp/app/script/: buildimages.sh  compile.sh
temp/app/server/lib/: server.h
temp/app/server/src/: server.cpp
temp/app/services/auth/: Dockerfile  authentication
temp/app/services/auth/data/models/: user.h
temp/app/services/auth/lib/: get_requests.h
temp/app/services/auth/src/: post_requests.cpp  server.cpp
temp/client/static/scripts/pages/dashboard/events/: clearScreen.js  followUser.js
temp/client/static/scripts/pages/dashboard/responsive/: responsive.js
temp/client/static/scripts/pages/dashboard/views/: notificationView.js
temp/client/static/scripts/pages/login/: login.js
temp/client/static/scripts/pages/signup/: main.js
temp/client/static/scripts/pages/signup/events/: setup.js
temp/client/static/styles/: main.css
temp/client/static/styles/components/buttons/: buttons.css
temp/client/static/styles/components/icons/: icons.css
temp/client/static/styles/layout/: avatars.css  footer.css  nav.css
temp/client/static/styles/pages/: login.css  signup.css
temp/client/static/styles/views/: profileView.css
temp/controllers/lib/: connectionController.h  userController.h
temp/database/: lurm_db.sql
temp/database/connection/src/: DBManager.cpp
temp/database/queries/lib/: notificationsQueries.h  userConnectionQueries.h  userQueries.h
temp/middleware/authenticate/src/: authenticate.cpp
temp/models/: connection.h
temp/routes/lib/: routes.h
temp/server/src/: webserver.cpp
temp/utils/: database.h
utils/: CMakeLists.txt  common.cpp  common.h  database.h
utils/lib/: common.h  headers.h
utils/src/: common.cpp
(+64 files in other folders)
